# graphicssamples

./: .hgignore  CMakeLists.txt  README.md  README.txt
dependencies/: CMakeLists.txt  README.md
seminar1/: Application.cpp  Application.h  CMakeLists.txt  Sample_01_1_SolidTriangle.cpp  Sample_01_2_ColoredTriangle.cpp  Sample_01_3_DrawArrays.cpp  Sample_01_3_Indexes.cpp  Sample_01_4_DrawElements.cpp  Sample_01_4_Map.cpp  Sample_1_1.cpp  Sample_1_1_SolidTriangle.cpp  Sample_1_2.cpp  Sample_1_3.cpp  Sample_1_3_DrawArrays.cpp  Sample_1_4.cpp  Sample_1_4_DrawElements.cpp
seminar10/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  CommonMaterial.cpp  CommonMaterial.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ParticleMaterial.cpp  ParticleMaterial.h  Sample_10_1_ComputeShader.cpp  Sample_10_1_Instancing.cpp  Sample_10_2_GPUCulling.cpp  Sample_10_2_Particles.cpp  Sample_10_3_Tesselation.cpp  Sample_10_3_TransformFeedback.cpp  Sample_10_4_GeometryShader.cpp  Sample_10_5_ComputeShader.cpp  Sample_10_6_GPUCulling.cpp  Sample_10_7_Tesselation.cpp  ScreenAlignedQuadMaterial.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TransformFeedbackShader.cpp  TransformFeedbackShader.h
seminar11/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CommonMaterial.cpp  CommonMaterial.h  Framebuffer.cpp  Material.h  Mesh.cpp  Mesh.h  OculusDistortionShader.cpp  OculusDistortionShader.h  Program.cpp  Sample_11_1_HorizontalSplit.cpp  Sample_11_2_Oculus.cpp  ScreenAlignedQuadMaterial.h  Texture.cpp  Texture.h
seminar2/: Application.cpp  Application.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Program.cpp  Sample_02_1_Transformation.cpp  Sample_02_2_Shaders.cpp  Sample_02_3_Points.cpp  Sample_02_4_Lines.cpp  Sample_02_5_ScreenSpaceQuad.cpp  Sample_02_6_UBO.cpp  Sample_2_1.cpp  Sample_2_1_Transformation.cpp  ShaderProgram.cpp  ShaderProgram.h
seminar3/: Application.cpp  Application.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Program.cpp  Sample_03_1_DirectionalLight.cpp  Sample_03_1_Shaders.cpp  Sample_03_2_PointLight.cpp  Sample_03_3_Lines.cpp  Sample_03_3_PerFragment.cpp  Sample_03_4_Attenuation.cpp  Sample_03_5_CookTorrance.cpp  Sample_03_5_UBO.cpp  Sample_03_6_MultiLights.cpp  Sample_03_7_LightingUBO.cpp  Sample_3_1.cpp  Sample_3_1_Shaders.cpp  Sample_3_2.cpp  Sample_3_2_Points.cpp  Sample_3_3.cpp  Sample_3_3_Lines.cpp  Sample_3_4.cpp  Sample_3_4_ScreenSpaceQuad.cpp  ShaderProgram.h
seminar4/: Application.cpp  Application.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Sample_04_1_DirectionalLight.cpp  Sample_04_1_Texturing.cpp  Sample_04_2_Magnification.cpp  Sample_04_2_PointLight.cpp  Sample_04_3_Minification.cpp  Sample_04_3_PerFragment.cpp  Sample_04_4_Attenuation.cpp  Sample_04_4_Specular.cpp  Sample_04_5_CookTorrance.cpp  Sample_04_5_LookupTexture.cpp  Sample_04_6_CubeTex.cpp  Sample_04_6_MultiLights.cpp  Sample_04_7_LightingUBO.cpp  Sample_4_1.cpp  Sample_4_1_DirectionalLight.cpp  Sample_4_2.cpp  Sample_4_2_PointLight.cpp  Sample_4_3.cpp  Sample_4_3_PerFragment.cpp  Sample_4_4.cpp  Sample_4_4_Attenuation.cpp  Sample_4_5.cpp  Sample_4_5_CookTorrance.cpp  Sample_4_6.cpp  Sample_4_6_MultiLights.cpp  ShaderProgram.h
seminar5/: Application.cpp  Application.h  CMakeLists.txt  Mesh.cpp  Meshes.cpp  Sample_05_1_Texturing.cpp  Sample_05_1_Viewports.cpp  Sample_05_2_Magnification.cpp  Sample_05_2_ZFighting.cpp  Sample_05_3_BackFaceCulling.cpp  Sample_05_3_Minification.cpp  Sample_05_4_Specular.cpp  Sample_05_4_Transparency.cpp  Sample_05_5_LookupTexture.cpp  Sample_05_5_Stencil.cpp  Sample_05_6_CSG.cpp  Sample_05_7_Projector.cpp  Sample_5_1.cpp  Sample_5_1_Texturing.cpp  Sample_5_2.cpp  Sample_5_2_Magnification.cpp  Sample_5_3.cpp  Sample_5_3_Minification.cpp  Sample_5_4.cpp  Sample_5_4_Specular.cpp  ShaderProgram.h  Shaders.cpp  Texture.cpp  Texture.h  Textures.cpp
seminar6/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CommonMaterial.cpp  CommonMaterial.h  CommonShader.cpp  CommonShader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Meshes.cpp  Navigation.cpp  Sample_06_1_CopyTex.cpp  Sample_06_1_CubeTex.cpp  Sample_06_2_Framebuffer.cpp  Sample_06_2_Viewports.cpp  Sample_06_3_MRT.cpp  Sample_06_3_ZFighting.cpp  Sample_06_4_BackFaceCulling.cpp  Sample_06_4_Shadows.cpp  Sample_06_5_Transparency.cpp  Sample_06_6_Stencil.cpp  Sample_6_1.cpp  Sample_6_1_CubeTex.cpp  Sample_6_2.cpp  Sample_6_2_Viewports.cpp  Sample_6_3.cpp  Sample_6_3_ZFighting.cpp  Sample_6_4.cpp  Sample_6_4_BackFaceCulling.cpp  Sample_6_5.cpp  Sample_6_5_Transparency.cpp  Sample_6_6.cpp  Sample_6_6_Stencil.cpp  Shader.cpp  Shader.h  ShaderProgram.h  (+6 more)
seminar7/: Application.cpp  Application.h  CMakeLists.txt  Camera.h  CommonMaterial.cpp  Material.h  Mesh.cpp  Mesh.h  Navigation.cpp  Program.cpp  ProjectionTextureMaterial.cpp  ProjectionTextureMaterial.h  Sample_07_1_Deferred.cpp  Sample_07_1_Projector.cpp  Sample_07_2_CopyTex.cpp  Sample_07_2_Forward.cpp  Sample_07_3_Framebuffer.cpp  Sample_07_4_MRT.cpp  Sample_7_1_Projector.cpp  Sample_7_2_CopyTex.cpp  Sample_7_3_Framebuffer.cpp  Sample_7_4_MRT.cpp  ScreenAlignedQuadMaterial.cpp  ScreenAlignedQuadMaterial.h  SkyBoxMaterial.cpp  Texture.h
seminar8/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  ColorMaterial.h  CommonMaterial.cpp  DeferredRenderingMaterial.cpp  DeferredRenderingMaterial.h  Light.h  Mesh.cpp  ProjectionTextureMaterial.cpp  ProjectionTextureMaterial.h  RenderToGBufferMaterial.h  RenderToShadowMaterial.cpp  RenderToShadowMaterial.h  Sample_08_1_Grayscale.cpp  Sample_08_1_Shadows.cpp  Sample_08_2_Deferred.cpp  Sample_08_2_Gamma.cpp  Sample_08_3_Forward.cpp  Sample_08_3_HDR.cpp  Sample_08_4_SSAO.cpp  Sample_08_5_DoF.cpp  Sample_8_1_Shadows.cpp  Sample_8_2_Deferred.cpp  ScreenAlignedQuadMaterial.cpp  ShadowMaterial.cpp  ShadowMaterial.h  Texture.h
seminar9/: Application.cpp  Application.h  BloomEffect.cpp  BloomEffect.h  CMakeLists.txt  ColorMaterial.cpp  CommonMaterial.h  DeferredRenderingMaterial.cpp  DeferredRenderingMaterial.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Mesh.h  SSAOEffect.cpp  (+26 more)
(+302 files in other folders)
