CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(GraphicsSamples VERSION 3.0)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake Targets")

INCLUDE(MacroUtils)

set(DEPENDENCIES_ROOT CACHE PATH "Dependencies install path")
if (DEPENDENCIES_ROOT)
	include(${DEPENDENCIES_ROOT}/lib/cmake/glew/glew-targets.cmake)
	include(${DEPENDENCIES_ROOT}/lib/cmake/glfw/glfwTargets.cmake)
	include(${DEPENDENCIES_ROOT}/lib/cmake/glm/glmTargets.cmake)
	include(${DEPENDENCIES_ROOT}/lib/cmake/assimp-3.2/assimpTargets.cmake)
else ()
	message("Set DEPENDENCIES_ROOT variable")
endif ()
		
FIND_PACKAGE(AntTweakBar)
FIND_PACKAGE(OculusSDK)

IF (UNIX)
	FIND_PACKAGE(X11 REQUIRED)

	FIND_PACKAGE(OpenGL REQUIRED)
	ADD_DEFINITIONS(${OpenGL_DEFINITIONS})

	FIND_PACKAGE(Threads REQUIRED)
ENDIF (UNIX)

SET(CMAKE_INCLUDE_PATH CACHE STRING "Put your include dir here...")
SET(CMAKE_LIBRARY_PATH CACHE STRING "Put your lib dir here...")

SET(CMAKE_DEBUG_POSTFIX "d")

OPTION(USE_CORE_PROFILE "Enable to use core profile" OFF)
IF (USE_CORE_PROFILE)
	ADD_DEFINITIONS(-DUSE_CORE_PROFILE)
ENDIF (USE_CORE_PROFILE)

OPTION(USE_GLSL_130 "Enable to use GLSL version 130" OFF)

INCLUDE_DIRECTORIES(
	${CMAKE_INCLUDE_PATH}
	${OpenGL_INCLUDE_DIRS}
	${PROJECT_SOURCE_DIR}/3rdParty/glimg-0.5.2/include
	${ANTTWEAKBAR_INCLUDE_DIRS}
)

IF (OCULUS_SDK_LIBRARIES)
	INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${OCULUS_SDK_INCLUDE_DIRS})
ENDIF ()

LINK_DIRECTORIES(
	${CMAKE_LIBRARY_PATH}
	${OpenGL_LIBRARY_DIRS}
)

ADD_SUBDIRECTORY(3rdParty/glimg-0.5.2)
ADD_SUBDIRECTORY(seminar1)
ADD_SUBDIRECTORY(seminar2)
ADD_SUBDIRECTORY(seminar3)
ADD_SUBDIRECTORY(seminar4)
ADD_SUBDIRECTORY(seminar5)
ADD_SUBDIRECTORY(seminar6)
ADD_SUBDIRECTORY(seminar7)
ADD_SUBDIRECTORY(seminar8)
ADD_SUBDIRECTORY(seminar9)
ADD_SUBDIRECTORY(seminar10)
ADD_SUBDIRECTORY(seminar11)

FILE(GLOB STUDENTS students/*)
FOREACH(STUDENT ${STUDENTS})
	IF (IS_DIRECTORY ${STUDENT})
		MESSAGE("Student task found " ${STUDENT})
		ADD_SUBDIRECTORY("${STUDENT}")
	ENDIF ()
ENDFOREACH()

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/images/ DESTINATION ${CMAKE_INSTALL_PREFIX}/images)
install(DIRECTORY ${DEPENDENCIES_ROOT}/bin/ DESTINATION ${CMAKE_INSTALL_PREFIX})