SET(APP_NAME seminar1)

SET(SRC_FILES
	Program.cpp
	Application.cpp
)

SET(HEADER_FILES
	Application.h
)

SET(SHADER_FILES
	shaders1/simple.vert
	shaders1/simple.frag
	shaders1/simple_color.vert
	shaders1/simple_color.frag
)

SOURCE_GROUP("Shaders" FILES	
	${SHADER_FILES}	
)

ADD_EXECUTABLE(${APP_NAME} ${SRC_FILES} ${HEADER_FILES} ${SHADER_FILES})

TARGET_LINK_LIBRARIES(${APP_NAME} glew ${GLFW_LIBRARY})

IF(WIN32)
	TARGET_LINK_LIBRARIES(${APP_NAME} opengl32)
ELSE(WIN32)
	TARGET_LINK_LIBRARIES(${APP_NAME} ${OPENGL_LIBRARIES} ${X11_Xxf86vm_LIB} ${X11_Xi_LIB} ${X11_Xrandr_LIB} ${PTHREAD_LIBRARY})
ENDIF(WIN32)

INSTALL(TARGETS ${APP_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})

INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/${APP_NAME}/shaders1 DESTINATION ${CMAKE_INSTALL_PREFIX})